# Whisper_test

./: .gitignore  README.md
app/: build.gradle.kts
app/src/androidTest/java/com/magus/myapplication/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/whisper/: jni.c
app/src/main/java/com/magus/myapplication/: HomeView.kt  HomeViewModel.kt  MainActivity.kt
app/src/main/java/com/magus/myapplication/common/utils/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
app/src/main/java/com/magus/myapplication/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/magus/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
